Squashable commit; refactors everything
Signed-off-by: Laird Nelson <ljnelson@gmail.com>